[project]
name = "toender-watch"
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.42.0",
  "python-dateutil>=2.9.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "requests>=2.31.0",
  "aiohttp>=3.9.0",
  "websockets>=12.0",
]

[project.scripts]
toender-watch = "toender_watch_v4:main"
